--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Nashaat Says Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="index (2).html">HOME</a>
+<a href="index (2).html"><h1>HOME</h1></a>
 </body>
 </html>
